# hermes-va-disability-coach

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.json  README.md  REPOSITORY_TREE.txt  SECURITY.md  SHA256SUMS  pyproject.toml  skills.sh.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rating_rule_update.yml  source_correction.yml
.github/workflows/: ci.yml  link-check.yml  source-freshness.yml
docs/: COMPLETION_REPORT.md  CONTRADICTIONS.md  ESTIMATOR_DESIGN.md  FRESHNESS_LOG.md  HERMES_COMPATIBILITY.md  MAINTAINER_GUIDE.md  REJECTED_SOURCES.md  RELEASE_PROCESS.md  RESEARCH_GAPS.md  RESEARCH_METHOD.md  SEARCH_LOG.md  SOURCE_REGISTRY.md  THREAT_MODEL.md
hermes_va_disability_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
skills/va-disability-coach/: SKILL.md
skills/va-disability-coach/assets/: README.md
skills/va-disability-coach/examples/: deidentified_doctor_plan.md  deidentified_issue_inventory.md  (+2 more)
tests/: TEST_RESULTS.md  adversarial_scenarios.jsonl  citation_scenarios.jsonl  coaching_scenarios.jsonl  combined_scenarios.jsonl  communication_scenarios.jsonl  conftest.py  estimator_scenarios.jsonl  functional_scenarios.jsonl  overlap_scenarios.jsonl  safety_scenarios.jsonl  test_bilateral_factor.py  test_bundle_install.py  test_coaching_contract.py  test_combined_ratings.py  test_estimator.py  test_issue_schema.py  test_scenarios.py  test_security.py  test_source_registry.py  test_transition_planner.py  transition_scenarios.jsonl
(+62 files in other folders)
